welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: '(' expected but 'override' found.
	override def run() {
        ^MethodsDogHouse:41: error: illegal start of simple expression
}
^