welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
	baisseBrosse()
  avance(2)
}


for 